[project]
name = "hass-ezviz-stream"
version = "0.0.0"
description = "Home Assistant integration streaming EZVIZ battery cameras via the EZVIZ cloud"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.14.2"
# Runtime dependencies of the integration. Mirror the `requirements` list from
# custom_components/ezviz_stream/manifest.json here (e.g. pyEzvizApi): Home
# Assistant installs them at launch, but our dev tooling and the pip-audit hook
# (which audits `uv export --no-dev`, i.e. this tree only, excluding HA) need them
# declared here too. Keep the two in step.
dependencies = [
    "pycryptodome>=3.20",
]

# Development / tooling dependencies (source of truth for the dev environment).
# Manage with uv:
#   uv sync              install/refresh the .venv from uv.lock
#   uv add --dev <pkg>   add a dev dependency (updates pyproject.toml + uv.lock)
#   uv run <cmd>         run a command inside the project environment
[dependency-groups]
dev = [
    "colorlog==6.10.1",
    "homeassistant>=2026.7.2",
    "pre-commit==4.5.1",
    "ruff==0.15.21",
    "mypy==1.19.1",
    "python-dotenv",
    "pytest-homeassistant-custom-component>=0.13.346",
    "scapy>=2.7.0",
    "pyezvizapi>=1.0.5.0",
    "pyturbojpeg>=2.4.0",
    "ha-ffmpeg>=3.2.2",
    "pylint>=4.0.6",
]

# This repo is a Home Assistant custom component, not an installable package, so
# tell uv not to build/install the project itself - only manage its dependencies.
[tool.uv]
package = false

[tool.pytest.ini_options]
# pytest-homeassistant-custom-component (and the aiohttp/asyncio plugins it pulls
# in) register async autouse fixtures; "auto" mode lets pytest-asyncio drive them
# so plain sync unit tests (e.g. the decryptor tests) run cleanly alongside future
# HA integration tests.
asyncio_mode = "auto"

# Pylint runs for one thing only: the duplicate-code (copy/paste) detector, which
# ruff does not provide. Everything else is disabled (ruff owns linting). The
# `duplicate-code` pre-commit hook runs this over custom_components/ezviz_stream.
[tool.pylint."messages control"]
disable = ["all"]
enable = ["duplicate-code"]

[tool.pylint.similarities]
min-similarity-lines = 6  # flag copy/paste of 6+ similar lines; tune if too strict
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
